# Financial-Document-Auditor

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  reset_runtime_data.py
data/rule_definitions/: CHANGELOG.md  global_invoice_rules.yaml
data/vendor_registry/: vendors.yaml
docs/: API.md  ARCHITECTURE.md  VERSION_CONTROL.md
financial_auditor/: __init__.py  pipeline.py
financial_auditor/api/: dependencies.py  main.py
financial_auditor/core/: __init__.py  logging.py
financial_auditor/core/audit_trail/: __init__.py  writer.py
financial_auditor/core/config/: __init__.py  settings.py
financial_auditor/core/schemas/: __init__.py  audit.py  documents.py  findings.py  pipeline.py  versions.py
financial_auditor/core/storage/: __init__.py  files.py  sqlite.py
financial_auditor/services/: __init__.py
financial_auditor/services/anomaly/: __init__.py  service.py
financial_auditor/services/confidence/: __init__.py  service.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: AppShell.tsx  (+10 more)
prompts/extraction/: invoice_system.md  invoice_user.md
prompts/reporting/: finding_narrative.md
prompts/verification/: invoice_system.md  invoice_user.md
tests/: conftest.py
tests/unit/: test_arithmetic_engine.py  test_audit_trail.py  test_confidence.py  test_line_item_extraction.py  test_reset_runtime_data.py  test_rule_engine.py  test_schema_binder.py  test_schema_validator.py  test_version_control_contracts.py
(+29 files in other folders)
